Fixing a z-index issue with the beta warning bar. Also restructuring the bar width so it will never wrap onto two lines

--- a/styles/home.css
+++ b/styles/home.css
@@ -155,19 +155,18 @@ complimentary greens: 9FB553    7B8851    61761B    C6DA82    CCDA99
 
 #head-beta-warning {
     background-color: #99C;
-    display: none;
+    /*display: none;*/
     position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
-    z-index: 100;
+    z-index: 999;
 }
 
 #beta-warning {
     margin: 0 auto;
     padding: 0.3em;
-    width: 50%;
-    display: none;
+    text-align: center;
 }
 
 #beta-warning .blurb {
@@ -175,7 +174,6 @@ complimentary greens: 9FB553    7B8851    61761B    C6DA82    CCDA99
     line-height: 1.0em;
     vertical-align: middle;
     color: #EEE;
-    display: none;
 }
 
 #beta-warning .blurb a {
@@ -187,18 +185,16 @@ complimentary greens: 9FB553    7B8851    61761B    C6DA82    CCDA99
 }
 
 #beta-warning-close {
-    display: block;
-    float: right;
     background-color: #333;
     color: #EEE;
     font-weight: bold;
     text-decoration: none;
-    margin-top: 0;
+    margin: 0 0 0 1em;
     height: 1.2em;
     line-height: 1.2em;
     vertical-align: middle;
     width: 1.2em;
-    padding: 0.2em;
+    padding: 0.2em 0.5em 0.2em 0.5em;
     text-align: center;
     border-radius: 5px;
     -moz-border-radius: 5px;
